--- a/client-side/src/pages/dashboard/dashboard.css
+++ b/client-side/src/pages/dashboard/dashboard.css
@@ -159,10 +159,12 @@
     border-radius: 10px;
     background-color: rgba(128, 128, 128, 0.767);
     box-shadow: inset 0 0 15px rgba(0, 0, 0, 0.876);
+    overflow: auto;
 }
 .eachWork{
   color:white;
-  padding:5px 10px;
+  padding:0px 10px;
+  border: 3px solid transparent;
 }
 .break-line{
   width:100%;
@@ -175,6 +177,7 @@
   font-weight: bold;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 .content-end{
   width:8px;
@@ -188,6 +191,7 @@
   justify-content: center;
 }
 .Mark-button{
+  min-width:115px;
   height:30px;
   border-radius: 20px;
   border:none;
@@ -197,7 +201,26 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.801);
   padding:0px 10px;
   cursor:pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .Mark-button:hover{
   background-color:rgb(43, 251, 43) ;
+}
+.tick{
+  width:30px;
+  height:40px;
+  margin-bottom:22px;
+} 
+.No-content{
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 25px;
+  font-weight: bold;
+}
+.No{
+  color:rgb(224, 5, 5);
 }
