--- a/client-side/src/pages/login/login.css
+++ b/client-side/src/pages/login/login.css
@@ -26,7 +26,7 @@
   border-radius: 10px;
   padding:10px 40px;
   width:35vw;
-  height:400px;
+  max-height:400px;
 }
 .Login-text{
     color:white;
