--- a/client-side/src/header/header.css
+++ b/client-side/src/header/header.css
@@ -39,3 +39,36 @@
     margin-top: 40px;
     transform: rotate(225deg);
 }
+@media only screen and (max-width:600px){
+    .header-container{
+        background-color: grey;
+        height:50px;
+        width:95vw;
+        position:fixed;
+        border-radius: 20px;
+        top:5px;
+        left:0px;
+        margin-left: 50%;
+        transform: translate(-50%);
+        display:flex;
+        align-items: center;
+        z-index:2;
+    }
+    .todo-logo{
+        width:45px;
+        height:40px;
+        margin-left: 15px;
+    }
+    .header-title{
+        padding-left:10px;
+        font-size:25px;
+        font-family:Arial, Helvetica, sans-serif 
+    }
+    .pencil{
+        width:40px;
+        height:40px;
+        margin-left:-50px;
+        margin-top: 30px;
+        transform: rotate(225deg);
+    }
+}
