--- a/client-side/src/pages/dashboard/dashboard.css
+++ b/client-side/src/pages/dashboard/dashboard.css
@@ -4,13 +4,14 @@
 }
 .Dashboard-container {
   width: 90vw;
-  height:87%;
+  height:85%;
   margin: 80px auto 0px auto;
   overflow: auto;
   background-color: white;
   border-radius: 20px;
   font-family: poppins;
   position: relative;
+  padding-bottom: 10px;
 }
 .titleDiv {
   display: flex;
@@ -68,7 +69,7 @@
     width: 50%;
     padding:40px 0px ;
 }
-.input{
+.d-input{
     width:100%;
     height: 100%;
     outline: none;
@@ -76,14 +77,15 @@
     font-family: poppins;
     box-sizing: border-box;
     padding-left: 10px;
+    color:black;
 }
 
-.input:placeholder-shown{
+.d-input:placeholder-shown{
     font-family: poppins;
     font-size: 25px;
     cursor:auto;
 }
-.input::placeholder{
+.d-input::placeholder{
     color: rgb(9, 218, 9);
 }
 .Add-Button{
@@ -148,13 +150,13 @@
     bottom:0px;
     width:100vw;
     height:100vh;
-    overflow: auto;
+    overflow:auto;
 }
 .todo-List{
     margin-top:10px;
     width: 90%;
     margin:10px auto 0px auto;
-    height: 77%;
+    height: 75%;
     border:4px solid grey;
     border-radius: 10px;
     background-color: rgba(128, 128, 128, 0.767);
@@ -223,4 +225,71 @@
 }
 .No{
   color:rgb(224, 5, 5);
+}
+
+@media only screen and (max-width:600px){
+  .Dashboard-container {
+    width: 90vw;
+    height:85%;
+    margin: 60px auto 0px auto;
+    overflow: auto;
+    background-color: white;
+    border-radius: 20px;
+    font-family: poppins;
+    position: relative;
+    padding-bottom: 10px;
+  }
+  .input-wrapper{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 70%;
+    padding:40px 0px ;
+}
+  .titleDiv {
+    display: flex;
+    justify-content: center;
+    font-size: 12px;
+  }
+  .d-input:placeholder-shown{
+    font-family: poppins;
+    font-size: 20px;
+    cursor:auto;
+}
+.completed{
+  margin-left:5%;
+  font-weight: bold;
+  font-size: 15px;
+  margin-top:10px;
+}
+.AddWorkButton {
+  margin-right: 5%;
+  padding: 1px 4px;
+  border-radius: 20px;
+  background: linear-gradient(45deg, rgb(10, 255, 10), rgb(20, 211, 218));
+  font-family: poppins;
+  font-weight: bold;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.513);
+  margin-top:10px;
+}
+  .work-content{
+    padding:20px 0px;
+    font-size: 20px;
+    font-weight: bold;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .No-content{
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    font-weight: bold;
+  }
 }
