--- a/client-side/src/pages/login/login.css
+++ b/client-side/src/pages/login/login.css
@@ -27,6 +27,7 @@
   padding:10px 40px;
   width:35vw;
   max-height:400px;
+  height: 400px;
 }
 .Login-text{
     color:white;
@@ -149,8 +150,8 @@ input:focus{
   }
 @media only screen and (max-width:600px){
     .Login{
-        font-family: poppins;
-        border:3px solid black;
+      font-family: poppins;
+      border:3px solid black;
       background: rgba(10, 10, 10, 0.609);
       box-shadow: 0 0 30px black;
       backdrop-filter: blur(6px);
@@ -158,7 +159,8 @@ input:focus{
       border-radius: 10px;
       padding:10px 20px;
       width:60vw;
-      height:400px;
+      max-height:400px;
+      height: 400px;
   }
   .division_1{
     width:100%;
