--- a/client-side/src/Components/pages/dashboard/dashboard.css
+++ b/client-side/src/Components/pages/dashboard/dashboard.css
@@ -16,10 +16,10 @@
     position: relative;
 }
 .dashTitle{
-   font-family:'Abhaya Libre', serif;
+    font-family:poppins;
    font-size:30px;
    padding-top: 15px;
-   font-weight: bold;
+   /* font-weight: bold; */
    color:rgb(17, 17, 253);
    display: flex;
    justify-content: center;
@@ -32,6 +32,7 @@
     font-weight: bold;
     font-size:25px;
     margin-top:40px;
+    color: rgb(70, 70, 70);
 }
 .subText{
     padding-left: 20px;
@@ -45,9 +46,10 @@
     margin-left: 10px;
 }
 .completed{
-    font-family:'Abhaya Libre', serif;
+    font-family:poppins;
     display:flex;
     align-items: center;
+    font-size: 18px;
 }
 .todoList{
     box-shadow: inset 0 0 8px black;
@@ -83,7 +85,7 @@
 }  
 .eachWork{
     margin:15px 0px 10px 0px ;
-    min-height:80px;
+    min-height:70px;
     width:100%;
     background-color: rgba(255, 255, 255, 0.678);
     border-radius: 0 10px 10px 0;
@@ -94,7 +96,7 @@
     box-sizing: border-box;
     font-size: 20px;
     font-family: poppins;
-  
+    color:rgb(68, 68, 68)
 }
 .accDec{
     display: flex;
@@ -105,7 +107,7 @@
 }
 .accDec>i{
     font-size: 20px;
-    color:blue;
+    color:rgb(255, 31, 31);
 }
 .accDec>i:hover{
     cursor: pointer;
@@ -114,13 +116,15 @@
 .Mark-button{
     min-width:115px;
     height:30px;
-    border-radius: 20px;
+    border-radius: 5px;
     border:none;
     outline:none;
     /* background-color: rgb(26, 236, 26); */
-    background:linear-gradient(45deg,rgb(2, 253, 2),rgb(21, 184, 75));
+    /* background:linear-gradient(45deg,rgb(2, 253, 2),rgb(21, 184, 75)); */
     margin-right: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.801);
+    background-color: rgb(8, 245, 8);
+    color: white;
+    box-shadow: 0 0 10px rgba(138, 138, 138, 0.801);
     padding:0px 10px;
     cursor:pointer;
     display: flex;
@@ -148,21 +152,25 @@
     font-family: poppins;
     font-weight: bold;
     float:right;
-    border-radius: 10px;
+    border-radius: 5px;
     height:20px;
     border: none;
     outline:none;
-    box-shadow:0 0 8px rgb(0, 0, 0);
+    /* box-shadow:0 0 8px rgb(138, 137, 137); */
     align-items: flex-end;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding:12px 10px 12px 10px;
+    padding:15px 10px 15px 10px;
     margin-bottom: 10px;
-    background:linear-gradient(45deg, rgb(8, 245, 8), rgb(33, 228, 235));
+    cursor: pointer;
+    /* background:linear-gradient(45deg, rgb(8, 245, 8), rgb(33, 228, 235)); */
+    background-color: rgb(255, 78, 78);
+    color: white;
 }
 .content{
-    font-weight: bold;
+    /* font-weight: bold; */
+    font-size: 18px;
     word-wrap: break-word;
     overflow: auto;
 }
@@ -170,33 +178,53 @@
 .inputContainer {
     position: absolute;
     top:-200px;
+    left: 0px;
     width: 100%;
     display: flex;
-    height:200px;
+    height:100px;
     flex-direction: column;
+    justify-content: center;
     align-items:center;
-    background-color: rgb(1, 184, 1);
-    border-radius:0px 0px 20px 20px;
+    background-color: rgb(255, 103, 103);
+    border-radius:0px 0px 8px 8px;
     transition: all 1s;
     overflow: hidden;
     z-index: 50;
   }
   .inputDiv{
-      width:100%;
-      border-radius: 10px;
+      width:auto;
+      border-radius:5px;
       height:35px;
       overflow: hidden;
       display: flex;
       align-items: center;
       background-color: white;
-      /* padding-left: 10px; */
+      padding-left: 10px;
+      flex-grow: 1;
+      border: 1px solid white;
+      /* box-shadow:0 0 8px rgb(200, 200, 200); */
+  }
+  .input-wrapper>label{
+    color:white;
+    font-family: poppins;
   }
   .input-wrapper{
       display: flex;
       flex-direction: column;
-      align-items: center;
+      /* flex-direction: column; */
+      align-items: flex-start;
+      justify-content: center;
       width: 50%;
-      padding:40px 0px ;
+      padding:0px 0px ;
+      /* margin-top: 10px; */
+      /* border: 2px solid red; */
+  }
+  .input-wrapper>div{
+      width: 100%;
+      display: flex;
+  }
+  .input-wrapper i{
+   color: rgb(255, 103, 103)
   }
   .d-input{
       width:100%;
@@ -207,26 +235,31 @@
       box-sizing: border-box;
       padding-left: 10px;
       color:black;
+      
+      /* border: 2px solid red; */
   }
   
-  .d-input:placeholder-shown{
+  /* .d-input:placeholder-shown{
       font-family: poppins;
       font-size: 25px;
       cursor:auto;
   }
   .d-input::placeholder{
       color: rgb(9, 218, 9);
-  }
+  } */
   .Add-Button{
       color: white;
-      background:linear-gradient(45deg,rgb(10, 255, 10),rgb(0, 247, 255));
+      /* background:linear-gradient(45deg,rgb(10, 255, 10),rgb(0, 247, 255)); */
       outline:none;
-      border-radius:20px;
+      border-radius:5px;
       border:none;
-      padding: 5px 15px;
+      padding: 0px 15px;
       font-weight: bolder;
-      margin-top: 20px;
+      margin-left: 20px;
       cursor: pointer;
+      background-color: white;
+      color: rgb(255, 104, 104);
+      font-family: poppins;
   }
   .icon-Div{
       padding-right:10px;
@@ -235,10 +268,13 @@
       display:flex;
       justify-content: flex-end;
       color: white;
-      width:100%;
-      padding-right: 20px;
+      /* width:100%; */
+      /* padding-right: 20px; */
       transition:all 1s;
-      padding-top: 20px;
+      /* padding-top: 20px; */ 
+      position:absolute;
+      top:8px;
+      right:8px;
   }
   .exit{
       cursor: pointer;
